changed a file name, added images and references folders

--- a/Data_Loading_Exploration_and_Cleaning.ipynb
+++ b/Data_Loading_Exploration_and_Cleaning.ipynb
@@ -43,7 +43,7 @@
     "# The first function imports pandas.  The second imports the csv I downloaded\n",
     "# from the USGS website.\n",
     "import pandas as pd\n",
-    "hydro2 = pd.read_csv('./gitignore/usco2015v2.0.csv',  header= 1,\\\n",
+    "hydro2 = pd.read_csv('./data/usco2015v2.0.csv',  header= 1,\\\n",
     "encoding = 'unicode_escape')"
    ]
   },
@@ -67,8 +67,8 @@
     "# The second csv was used as it contained a value I needed, specifically a\n",
     "# county's land area.\n",
     "\n",
-    "county_demo = pd.read_csv('./gitignore/county.csv')\n",
-    "county_complete = pd.read_csv('./gitignore/county_complete.csv')"
+    "county_demo = pd.read_csv('./data/county.csv')\n",
+    "county_complete = pd.read_csv('./data/county_complete.csv')"
    ]
   },
   {
@@ -89,7 +89,7 @@
     "# This is a simple csv that contains two columns, namely state name and a state's\n",
     "# abbreviation.  It is used to help merge different csv's.\n",
     "\n",
-    "state_names = pd.read_csv('./gitignore/abbr-name.csv', names=['abr', 'state'])"
+    "state_names = pd.read_csv('./data/abbr-name.csv', names=['abr', 'state'])"
    ]
   },
   {
@@ -111,12 +111,12 @@
     "# and heating days all had yearly values that could be imported all at once. \n",
     "# PHDI, PDSI, and PMDI only had monthly values available which necessitated\n",
     "# more downloads.\n",
-    "precip = pd.read_csv('./gitignore/precip-2015.csv',  header= 3)\n",
-    "Min_temp = pd.read_csv('./gitignore/min_temp_2015.csv',  header= 3)\n",
-    "Max_temp = pd.read_csv('./gitignore/max_temp_2015.csv',  header= 3)\n",
-    "Avg_temp = pd.read_csv('./gitignore/avg_temp_2015.csv',  header= 3)\n",
-    "cooling_day = pd.read_csv('./gitignore/cooling_deg_2015.csv',  header= 3)\n",
-    "heating_day = pd.read_csv('./gitignore/heating_deg_2015.csv',  header= 3)"
+    "precip = pd.read_csv('./data/precip-2015.csv',  header= 3)\n",
+    "Min_temp = pd.read_csv('./data/min_temp_2015.csv',  header= 3)\n",
+    "Max_temp = pd.read_csv('./data/max_temp_2015.csv',  header= 3)\n",
+    "Avg_temp = pd.read_csv('./data/avg_temp_2015.csv',  header= 3)\n",
+    "cooling_day = pd.read_csv('./data/cooling_deg_2015.csv',  header= 3)\n",
+    "heating_day = pd.read_csv('./data/heating_deg_2015.csv',  header= 3)"
    ]
   },
   {
@@ -127,18 +127,18 @@
    "outputs": [],
    "source": [
     "# Importing PHDI downloads.\n",
-    "Jan2015_PHDI = pd.read_csv('./gitignore/Jan2015_PHDI.csv',  header= 2)\n",
-    "Feb2015_PHDI = pd.read_csv('./gitignore/Feb2015_PHDI.csv',  header= 2)\n",
-    "Mar2015_PHDI = pd.read_csv('./gitignore/Mar2015_PHDI.csv',  header= 2)\n",
-    "Apr2015_PHDI = pd.read_csv('./gitignore/Apr2015_PHDI.csv',  header= 2)\n",
-    "May2015_PHDI = pd.read_csv('./gitignore/May2015_PHDI.csv',  header= 2)\n",
-    "Jun2015_PHDI = pd.read_csv('./gitignore/Jun2015_PHDI.csv',  header= 2)\n",
-    "Jul2015_PHDI = pd.read_csv('./gitignore/Jul2015_PHDI.csv',  header= 2)\n",
-    "Aug2015_PHDI = pd.read_csv('./gitignore/Aug2015_PHDI.csv',  header= 2)\n",
-    "Sep2015_PHDI = pd.read_csv('./gitignore/Sep2015_PHDI.csv',  header= 2)\n",
-    "Oct2015_PHDI = pd.read_csv('./gitignore/Oct2015_PHDI.csv',  header= 2)\n",
-    "Nov2015_PHDI = pd.read_csv('./gitignore/Nov2015_PHDI.csv',  header= 2)\n",
-    "Dec2015_PHDI = pd.read_csv('./gitignore/Dec2015_PHDI.csv',  header= 2)"
+    "Jan2015_PHDI = pd.read_csv('./data/Jan2015_PHDI.csv',  header= 2)\n",
+    "Feb2015_PHDI = pd.read_csv('./data/Feb2015_PHDI.csv',  header= 2)\n",
+    "Mar2015_PHDI = pd.read_csv('./data/Mar2015_PHDI.csv',  header= 2)\n",
+    "Apr2015_PHDI = pd.read_csv('./data/Apr2015_PHDI.csv',  header= 2)\n",
+    "May2015_PHDI = pd.read_csv('./data/May2015_PHDI.csv',  header= 2)\n",
+    "Jun2015_PHDI = pd.read_csv('./data/Jun2015_PHDI.csv',  header= 2)\n",
+    "Jul2015_PHDI = pd.read_csv('./data/Jul2015_PHDI.csv',  header= 2)\n",
+    "Aug2015_PHDI = pd.read_csv('./data/Aug2015_PHDI.csv',  header= 2)\n",
+    "Sep2015_PHDI = pd.read_csv('./data/Sep2015_PHDI.csv',  header= 2)\n",
+    "Oct2015_PHDI = pd.read_csv('./data/Oct2015_PHDI.csv',  header= 2)\n",
+    "Nov2015_PHDI = pd.read_csv('./data/Nov2015_PHDI.csv',  header= 2)\n",
+    "Dec2015_PHDI = pd.read_csv('./data/Dec2015_PHDI.csv',  header= 2)"
    ]
   },
   {
@@ -149,18 +149,18 @@
    "outputs": [],
    "source": [
     "#  Importing PDSI downloads.\n",
-    "Jan2015_PDSI = pd.read_csv('./gitignore/Jan2015_PDSI.csv',  header= 2)\n",
-    "Feb2015_PDSI = pd.read_csv('./gitignore/Feb2015_PDSI.csv',  header= 2)\n",
-    "Mar2015_PDSI = pd.read_csv('./gitignore/Mar2015_PDSI.csv',  header= 2)\n",
-    "Apr2015_PDSI = pd.read_csv('./gitignore/Apr2015_PDSI.csv',  header= 2)\n",
-    "May2015_PDSI = pd.read_csv('./gitignore/May2015_PDSI.csv',  header= 2)\n",
-    "Jun2015_PDSI = pd.read_csv('./gitignore/Jun2015_PDSI.csv',  header= 2)\n",
-    "Jul2015_PDSI = pd.read_csv('./gitignore/Jul2015_PDSI.csv',  header= 2)\n",
-    "Aug2015_PDSI = pd.read_csv('./gitignore/Aug2015_PDSI.csv',  header= 2)\n",
-    "Sep2015_PDSI = pd.read_csv('./gitignore/Sep2015_PDSI.csv',  header= 2)\n",
-    "Oct2015_PDSI = pd.read_csv('./gitignore/Oct2015_PDSI.csv',  header= 2)\n",
-    "Nov2015_PDSI = pd.read_csv('./gitignore/Nov2015_PDSI.csv',  header= 2)\n",
-    "Dec2015_PDSI = pd.read_csv('./gitignore/Dec2015_PDSI.csv',  header= 2)"
+    "Jan2015_PDSI = pd.read_csv('./data/Jan2015_PDSI.csv',  header= 2)\n",
+    "Feb2015_PDSI = pd.read_csv('./data/Feb2015_PDSI.csv',  header= 2)\n",
+    "Mar2015_PDSI = pd.read_csv('./data/Mar2015_PDSI.csv',  header= 2)\n",
+    "Apr2015_PDSI = pd.read_csv('./data/Apr2015_PDSI.csv',  header= 2)\n",
+    "May2015_PDSI = pd.read_csv('./data/May2015_PDSI.csv',  header= 2)\n",
+    "Jun2015_PDSI = pd.read_csv('./data/Jun2015_PDSI.csv',  header= 2)\n",
+    "Jul2015_PDSI = pd.read_csv('./data/Jul2015_PDSI.csv',  header= 2)\n",
+    "Aug2015_PDSI = pd.read_csv('./data/Aug2015_PDSI.csv',  header= 2)\n",
+    "Sep2015_PDSI = pd.read_csv('./data/Sep2015_PDSI.csv',  header= 2)\n",
+    "Oct2015_PDSI = pd.read_csv('./data/Oct2015_PDSI.csv',  header= 2)\n",
+    "Nov2015_PDSI = pd.read_csv('./data/Nov2015_PDSI.csv',  header= 2)\n",
+    "Dec2015_PDSI = pd.read_csv('./data/Dec2015_PDSI.csv',  header= 2)"
    ]
   },
   {
@@ -171,18 +171,18 @@
    "outputs": [],
    "source": [
     "#  Importing PMDI downloads.\n",
-    "Jan2015_PMDI = pd.read_csv('./gitignore/Jan2015_PMDI.csv',  header= 2)\n",
-    "Feb2015_PMDI = pd.read_csv('./gitignore/Feb2015_PMDI.csv',  header= 2)\n",
-    "Mar2015_PMDI = pd.read_csv('./gitignore/Mar2015_PMDI.csv',  header= 2)\n",
-    "Apr2015_PMDI = pd.read_csv('./gitignore/Apr2015_PMDI.csv',  header= 2)\n",
-    "May2015_PMDI = pd.read_csv('./gitignore/May2015_PMDI.csv',  header= 2)\n",
-    "Jun2015_PMDI = pd.read_csv('./gitignore/Jun2015_PMDI.csv',  header= 2)\n",
-    "Jul2015_PMDI = pd.read_csv('./gitignore/Jul2015_PMDI.csv',  header= 2)\n",
-    "Aug2015_PMDI = pd.read_csv('./gitignore/Aug2015_PMDI.csv',  header= 2)\n",
-    "Sep2015_PMDI = pd.read_csv('./gitignore/Sep2015_PMDI.csv',  header= 2)\n",
-    "Oct2015_PMDI = pd.read_csv('./gitignore/Oct2015_PMDI.csv',  header= 2)\n",
-    "Nov2015_PMDI = pd.read_csv('./gitignore/Nov2015_PMDI.csv',  header= 2)\n",
-    "Dec2015_PMDI = pd.read_csv('./gitignore/Dec2015_PMDI.csv',  header= 2)"
+    "Jan2015_PMDI = pd.read_csv('./data/Jan2015_PMDI.csv',  header= 2)\n",
+    "Feb2015_PMDI = pd.read_csv('./data/Feb2015_PMDI.csv',  header= 2)\n",
+    "Mar2015_PMDI = pd.read_csv('./data/Mar2015_PMDI.csv',  header= 2)\n",
+    "Apr2015_PMDI = pd.read_csv('./data/Apr2015_PMDI.csv',  header= 2)\n",
+    "May2015_PMDI = pd.read_csv('./data/May2015_PMDI.csv',  header= 2)\n",
+    "Jun2015_PMDI = pd.read_csv('./data/Jun2015_PMDI.csv',  header= 2)\n",
+    "Jul2015_PMDI = pd.read_csv('./data/Jul2015_PMDI.csv',  header= 2)\n",
+    "Aug2015_PMDI = pd.read_csv('./data/Aug2015_PMDI.csv',  header= 2)\n",
+    "Sep2015_PMDI = pd.read_csv('./data/Sep2015_PMDI.csv',  header= 2)\n",
+    "Oct2015_PMDI = pd.read_csv('./data/Oct2015_PMDI.csv',  header= 2)\n",
+    "Nov2015_PMDI = pd.read_csv('./data/Nov2015_PMDI.csv',  header= 2)\n",
+    "Dec2015_PMDI = pd.read_csv('./data/Dec2015_PMDI.csv',  header= 2)"
    ]
   },
   {
@@ -1953,7 +1953,7 @@
     "# PHDI was one of the values which only had monthly data for states.  Multiple \n",
     "# downloads and merges were necessary to clean the data.\n",
     "\n",
-    "Jan2015_PHDI = pd.read_csv('./gitignore/Jan2015_PHDI.csv',  header= 2)\n",
+    "Jan2015_PHDI = pd.read_csv('./data/Jan2015_PHDI.csv',  header= 2)\n",
     "Jan2015_PHDI.head()"
    ]
   },
@@ -2633,7 +2633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 41,
    "id": "df89497e",
    "metadata": {},
    "outputs": [],
@@ -2786,7 +2786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 44,
    "id": "2ae479a8",
    "metadata": {},
    "outputs": [],
@@ -3096,7 +3096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 48,
    "id": "ec84e4c5",
    "metadata": {},
    "outputs": [],
@@ -3117,7 +3117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 49,
    "id": "b949ac91",
    "metadata": {},
    "outputs": [
@@ -3205,41 +3205,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 52,
    "id": "b1127107",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing the CSV's\n",
     "\n",
-    "Lake_Mead = pd.read_csv('./gitignore/Lake Mead.csv')\n",
-    "Wilard_Bay_Reservoir = pd.read_csv('./gitignore/Wilard Bay Reservoir.csv')\n",
-    "Lake_Nighthorse = pd.read_csv('./gitignore/Lake Nighthorse.csv')\n",
-    "Pineview_Reservoir = pd.read_csv('./gitignore/Pineview Reservoir.csv')\n",
-    "Scofield_Reservoir = pd.read_csv('./gitignore/Scofield Reservoir.csv')\n",
-    "Strawberry_Reservoir = pd.read_csv('./gitignore/Strawberry Reservoir.csv')\n",
-    "Granby_Reservoir = pd.read_csv('./gitignore/Granby  Reservoir.csv')\n",
-    "Heron_Reservoir = pd.read_csv('./gitignore/Heron Reservoir.csv')\n",
-    "Jordanelle_Reservoir = pd.read_csv('./gitignore/Jordanelle Reservoir.csv')\n",
-    "Lake_Havasu = pd.read_csv('./gitignore/Lake Havasu.csv')\n",
-    "Lake_Mohave = pd.read_csv('./gitignore/Lake Mohave.csv')            \n",
-    "Vallecito_Reservoir = pd.read_csv('./gitignore/Vallecito Reservoir.csv')\n",
-    "Taylor_Park_Reservoir = pd.read_csv('./gitignore/Taylor Park Reservoir.csv')\n",
-    "Starvation_Reservoir = pd.read_csv('./gitignore/Starvation Reservoir.csv')\n",
-    "Ridgway_Reservoir = pd.read_csv('./gitignore/Ridgway Reservoir.csv')\n",
-    "Navajo_Reservoir = pd.read_csv('./gitignore/Navajo Reservoir.csv')\n",
-    "Morrow_Point_Reservoir = pd.read_csv('./gitignore/Morrow Point Reservoir.csv')\n",
-    "McPhee_Reservoir = pd.read_csv('./gitignore/McPhee Reservoir.csv')\n",
-    "Lake_Powell = pd.read_csv('./gitignore/Lake Powell.csv')\n",
-    "Fontenelle_Reservoir = pd.read_csv('./gitignore/Fontenelle Reservoir.csv')\n",
-    "Flaming_Gorge_Reservoir = pd.read_csv('./gitignore/Flaming Gorge Reservoir.csv')\n",
-    "Crystal_Reservoir = pd.read_csv('./gitignore/Crystal Reservoir.csv')              \n",
-    "Blue_Mesa_Reservoir = pd.read_csv('./gitignore/Blue Mesa Reservoir.csv')"
+    "Lake_Mead = pd.read_csv('./data/Lake Mead.csv')\n",
+    "Wilard_Bay_Reservoir = pd.read_csv('./data/Wilard Bay Reservoir.csv')\n",
+    "Lake_Nighthorse = pd.read_csv('./data/Lake Nighthorse.csv')\n",
+    "Pineview_Reservoir = pd.read_csv('./data/Pineview Reservoir.csv')\n",
+    "Scofield_Reservoir = pd.read_csv('./data/Scofield Reservoir.csv')\n",
+    "Strawberry_Reservoir = pd.read_csv('./data/Strawberry Reservoir.csv')\n",
+    "Granby_Reservoir = pd.read_csv('./data/Granby  Reservoir.csv')\n",
+    "Heron_Reservoir = pd.read_csv('./data/Heron Reservoir.csv')\n",
+    "Jordanelle_Reservoir = pd.read_csv('./data/Jordanelle Reservoir.csv')\n",
+    "Lake_Havasu = pd.read_csv('./data/Lake Havasu.csv')\n",
+    "Lake_Mohave = pd.read_csv('./data/Lake Mohave.csv')            \n",
+    "Vallecito_Reservoir = pd.read_csv('./data/Vallecito Reservoir.csv')\n",
+    "Taylor_Park_Reservoir = pd.read_csv('./data/Taylor Park Reservoir.csv')\n",
+    "Starvation_Reservoir = pd.read_csv('./data/Starvation Reservoir.csv')\n",
+    "Ridgway_Reservoir = pd.read_csv('./data/Ridgway Reservoir.csv')\n",
+    "Navajo_Reservoir = pd.read_csv('./data/Navajo Reservoir.csv')\n",
+    "Morrow_Point_Reservoir = pd.read_csv('./data/Morrow Point Reservoir.csv')\n",
+    "McPhee_Reservoir = pd.read_csv('./data/McPhee Reservoir.csv')\n",
+    "Lake_Powell = pd.read_csv('./data/Lake Powell.csv')\n",
+    "Fontenelle_Reservoir = pd.read_csv('./data/Fontenelle Reservoir.csv')\n",
+    "Flaming_Gorge_Reservoir = pd.read_csv('./data/Flaming Gorge Reservoir.csv')\n",
+    "Crystal_Reservoir = pd.read_csv('./data/Crystal Reservoir.csv')              \n",
+    "Blue_Mesa_Reservoir = pd.read_csv('./data/Blue Mesa Reservoir.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "a3ea96ab",
    "metadata": {},
    "outputs": [],
@@ -3290,7 +3290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "784070e7",
    "metadata": {},
    "outputs": [],
