--- a/Water_Withdraw_and_Consumption_Model_Development.ipynb
+++ b/Water_Withdraw_and_Consumption_Model_Development.ipynb
@@ -15,7 +15,16 @@
    "execution_count": 2,
    "id": "e4645f38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\eincr\\anaconda3\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.1\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "68d46d3e",
    "metadata": {},
    "outputs": [],
@@ -37,8 +46,8 @@
     "# This loads the cleaned datasets made for this analysis. cleanNOAAUSGSdom will\n",
     "# be the one used as it only has one less row.\n",
     "\n",
-    "cleanNOAAUSGS = pd.read_csv('./gitignore/cleanNOAAUSGS.csv')\n",
-    "cleanNOAAUSGSdom = pd.read_csv('./gitignore/cleanNOAAUSGSdom.csv')"
+    "cleanNOAAUSGS = pd.read_csv('./data/cleanNOAAUSGS.csv')\n",
+    "cleanNOAAUSGSdom = pd.read_csv('./data/cleanNOAAUSGSdom.csv')"
    ]
   },
   {
